--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,25 @@
 	<artifactId>Projeto</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<description>	</description>
+
+	<dependencies>
+		<!-- PRIMEFACES -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.2</version>
+		</dependency>
+	</dependencies>
+	
+	<repositories>
+		<!-- REPOSITÓRIOS PRIMEFACES -->
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
+
+
 </project>
